# micro-quantum

./: CITATION.cff  README.md
Pico-qsim-1.3/c/: CMakeLists.txt  ReadmeCN.txt  ReadmeEN.txt  image-hex.c  main.c  old-image-hex.c
Pico-qsim-1.3/c/examples/: CMakeLists.txt  EPD_Test.h  ImageData.c  ImageData.h  LCD_1in14_test.c
Pico-qsim-1.3/c/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  Debug.h
Pico-qsim-1.3/c/lib/Fonts/: CMakeLists.txt
Pico-qsim-1.3/c/lib/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
Pico-qsim-1.3/c/lib/Icm20948/: CMakeLists.txt  icm20948.c  icm20948.h
Pico-qsim-1.3/c/lib/Infrared/: CMakeLists.txt  Infrared.c  Infrared.h
Pico-qsim-1.3/c/lib/LCD/: CMakeLists.txt  LCD_1in14.c  LCD_1in14.h  LCD_1in3.c
Pico-qsim-1.3/c/qsim/: CMakeLists.txt  gates.h  img_hex-old.c  img_hex.h  measure.c  measure.h  qsim.c  qsim.h  simulate.c  simulate.h
Pico-qsim-1.3/python/: Readme.txt
Pico-qsim-1.3/python/Pico-LCD-1.14/: Pico-LCD-1.14.py  ReadmeCN.txt  ReadmeEN.txt
